--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --passWithNoTests",
-    "test:coverage": "jest --watchAll=false --collect-coverage --passWithNoTests"
+    "test:coverage": "jest --watchAll=false --collect-coverage --passWithNoTests",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -59,7 +60,8 @@
     "eslint-plugin-react-native": "^4.0.0",
     "jest": "^27.5.1",
     "jest-expo": "^47.0.1",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "husky": "^8.0.0"
   },
   "private": true,
   "jest": {
