--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-native-dotenv": "^0.2.0",
+    "axios": "^1.1.3",
     "cross-env": "^7.0.3",
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.5",
+    "expo-updates": "~0.15.6",
     "jwt-decode": "^3.1.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -58,10 +59,11 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "^27.5.1",
     "jest-expo": "^47.0.1",
-    "typescript": "^4.9.3",
-    "husky": "^8.0.0"
+    "msw": "^0.49.0",
+    "typescript": "^4.9.3"
   },
   "private": true,
   "jest": {
