--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-native-dotenv": "^0.2.0",
-    "axios": "^1.1.3",
+    "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "expo": "~47.0.6",
     "expo-status-bar": "~1.4.2",
@@ -70,6 +70,7 @@
   "private": true,
   "jest": {
     "preset": "react-native",
+    "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
       "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
     ],
@@ -82,7 +83,7 @@
       "node"
     ],
     "setupFilesAfterEnv": [
-      "./jest.setup.ts"
+      "./src/jest.setup.ts"
     ]
   }
 }
