--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,4 +18,4 @@ jobs:
         run: npm test
         env:
           JWT_SECRET: ${{secrets.JWT_SECRET}}
-          REACT_APP_API_SOCIAL: ${{ secrets.REACT_APP_API_SOCIAL }}
+          REACT_APP_API_SOCIAL: ${{ secrets.REACT_APP_API_SKYBALL }}
