--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,6 +12,6 @@ sonar.sources=./src
 sonar.sourceEncoding=UTF-8
 
 sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx, src/setupTests.ts, src/reportWEbVitals.ts
+sonar.coverage.exclusions=src/index.tsx, src/setupTests.ts, src/reportWEbVitals.ts, src/jest.setup.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
