--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
@@ -36,6 +37,7 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-multiple-choice-picker": "^1.0.6",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
