Add register form input and label tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,6 @@
   "compilerOptions": {
     "strict": true
   },
-  "typeRoots": ["./src/types"]
+  "typeRoots": ["./src/types"],
+  "include": ["src"]
 }
