--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-native": "^5.3.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^29.2.3",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
@@ -70,14 +73,15 @@
     "jest": "^27.5.1",
     "jest-expo": "^47.0.1",
     "msw": "^0.49.0",
+    "react-test-renderer": "18.1",
     "typescript": "^4.9.3"
   },
   "private": true,
   "jest": {
-    "preset": "react-native",
+    "preset": "jest-expo",
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ],
     "moduleFileExtensions": [
       "ts",
@@ -88,7 +92,8 @@
       "node"
     ],
     "setupFilesAfterEnv": [
-      "./src/jest.setup.ts"
+      "./src/jest.setup.ts",
+      "@testing-library/jest-native/extend-expect"
     ]
   }
 }
