--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-native-dotenv": "^0.2.0",
