--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-native-dotenv": "^0.2.0",
@@ -46,7 +45,8 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "@react-navigation/native-stack": "^6.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
