--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@react-native-community/checkbox": "^0.5.14",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.2",
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^0.27.2",
     "cross-env": "^7.0.3",
     "expo": "~47.0.6",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "jwt-decode": "^3.1.2",
@@ -45,8 +48,7 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
-    "@react-navigation/native-stack": "^6.9.2"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
