--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@faker-js/faker": "^7.6.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/jest-native": "^5.3.0",
@@ -76,6 +77,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
+    "fishery": "^2.2.2",
     "husky": "^8.0.0",
     "jest": "^27.5.1",
     "jest-expo": "^47.0.1",
