--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^4.10.1",
@@ -55,7 +54,8 @@
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
