--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.1.1",
     "react": "^18.1.0",
     "react-dom": "18.1.0",
     "react-native-dotenv": "^3.4.2",
@@ -51,11 +52,11 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
-    "react-native-svg": "13.4.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -66,6 +67,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-native": "^11.0.0",
     "@types/jest": "^29.2.3",
+    "@types/luxon": "^3.1.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@types/react-redux": "^7.1.24",
