--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-dotenv": "^3.4.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-image-picker": "^4.10.1",
+    "react-native-maps": "^1.3.2",
     "react-native-multiple-choice-picker": "^1.0.6",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
