--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "preset": "jest-expo",
     "testEnvironment": "jsdom",
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.|@fortawesome/.|@expo-google-fonts/.|react-navigation|@react-navigation/.|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.|@fortawesome/.|@expo-google-fonts/.|react-navigation|@react-navigation/.|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)(?!react-native|react-native-maps)"
     ],
     "moduleFileExtensions": [
       "ts",
