--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-image-picker": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "intl": "^1.2.5",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.1.1",
     "react": "^18.1.0",
